--- a/helm/activemq/charts/daemon/templates/deployment.yaml
+++ b/helm/activemq/charts/daemon/templates/deployment.yaml
@@ -32,7 +32,7 @@ spec:
   resources:
     requests:
       storage: {{ .Values.persistentvolume.size }}
-  {{- if .Values.persistentvolume.create }}
+  {{- if .Values.persistentvolume.selector }}
   selector:
     matchLabels:
       {{- include "daemon.selectorLabels" . | nindent 6 }}
