--- a/helm/msgsvc/Chart.yaml
+++ b/helm/msgsvc/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: harvester
+name: msgsvc
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -25,9 +25,6 @@ appVersion: "1.16.0"
 
 
 dependencies:
-    - name: harvester
+    - name: activemq
       version: 0.1.0
-      condition: harvester.enabled
-    - name: mariadb
-      version: 0.1.0
-      condition: mariadb.enabled
+      condition: activemq.enabled
