--- a/helm/msgsvc/charts/activemq/Chart.yaml
+++ b/helm/msgsvc/charts/activemq/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: harvester
+name: activemq
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -22,12 +22,3 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.16.0"
-
-
-dependencies:
-    - name: harvester
-      version: 0.1.0
-      condition: harvester.enabled
-    - name: mariadb
-      version: 0.1.0
-      condition: mariadb.enabled
