--- a/helm/harvester/values.yaml
+++ b/helm/harvester/values.yaml
@@ -14,6 +14,9 @@ harvester:
   #persistentvolume:
   #    selector: false
 
+  # Experiment
+  experiment: ""
+
   panda:
     # panda server host and https port
     host: "FIXME"
