--- a/helm/msgsvc/charts/activemq/templates/configmap.yaml
+++ b/helm/msgsvc/charts/activemq/templates/configmap.yaml
@@ -16,5 +16,5 @@ kind: ConfigMap
 metadata:
   name: {{ include "activemq.fullname" . }}-env
 data:
-  ACTIVEMQ_BASS_PASSWD: {{ .Values.basePasswd }}
+  ACTIVEMQ_BASE_PASSWD: {{ .Values.basePasswd }}
   ACTIVEMQ_CHANNELS: {{ .Values.channels }}
