--- a/helm/msgsvc/charts/activemq/values.yaml
+++ b/helm/msgsvc/charts/activemq/values.yaml
@@ -5,9 +5,9 @@
 replicaCount: 1
 
 image:
-  repository: ghcr.io/tmaeno/panda-activemq
+  repository: ghcr.io/pandawms/panda-activemq
   pullPolicy: IfNotPresent
-  tag: "main"
+  tag: "latest"
 
 persistentvolume:
   create: false
