--- a/helm/panda/charts/jedi/sandbox/jedi_msg_proc_config.json
+++ b/helm/panda/charts/jedi/sandbox/jedi_msg_proc_config.json
@@ -1,36 +1,36 @@
 {
     "mb_servers": {
         "iDDS_mb": {
-            "host_port_list": ["activemq-dev-daemon:61613"],
+            "host_port_list": ["${PANDA_ACTIVEMQ_LIST}"],
             "use_ssl": false,
             "cert_file": null,
             "key_file": null,
-            "username": "FIXME_WRITER",
-            "passcode": "FIXME_PASS",
+            "username": "${PANDA_ACTIVEMQ_USER_jedi}",
+            "passcode": "${PANDA_ACTIVEMQ_PASSWD_jedi}",
             "verbose": true
         },
         "internal_mb": {
-            "host_port_list": ["activemq-dev-daemon:61613"],
+            "host_port_list": ["${PANDA_ACTIVEMQ_LIST}"],
             "use_ssl": false,
             "cert_file": null,
             "key_file": null,
-            "username": "FIXME_WRITER",
-            "passcode": "FIXME_PASS",
+            "username": "${PANDA_ACTIVEMQ_USER_jedi}",
+            "passcode": "${PANDA_ACTIVEMQ_PASSWD_jedi}",
             "verbose": true
         }
     },
     "queues": {
         "idds": {
             "server": "iDDS_mb",
-            "destination": "/queue/iddspanda"
+            "destination": "/queue/idds_panda"
         },
         "jedi_taskstatus": {
             "server": "internal_mb",
-            "destination": "/queue/self.jedi_taskstatus"
+            "destination": "/queue/taskstatus"
         },
         "to-idds": {
             "server": "iDDS_mb",
-            "destination": "/queue/pandaidds"
+            "destination": "/queue/panda_idds"
         }
     },
     "processors": {
