--- a/helm/panda/charts/server/templates/configmap.yaml
+++ b/helm/panda/charts/server/templates/configmap.yaml
@@ -35,6 +35,9 @@ data:
   PANDA_AUTH: "oidc"
   PANDA_AUTH_ID_TOKEN: {{ .Values.authIdToken }}
   PANDA_AUTH_VO: {{ .Values.authVO }}
+  PANDA_ACTIVEMQ_LIST: {{ join "," .Values.activemq.serverList }}
+  PANDA_ACTIVEMQ_PASSWD_panda: {{ .Values.activemq.basePasswd }}_panda
+  PANDA_ACTIVEMQ_PASSWD_jedi: {{ .Values.activemq.basePasswd }}_jedi
   {{- end }}
   {{- if .Values.httpProxy }}
   http_proxy: "{{ .Values.httpProxy }}"
