--- a/helm/panda/charts/server/sandbox/panda_mbproxy_config.json
+++ b/helm/panda/charts/server/sandbox/panda_mbproxy_config.json
@@ -8,12 +8,29 @@
             "username": "panda",
             "passcode": "${PANDA_ACTIVEMQ_PASSWD_panda}",
             "verbose": true
+        },
+        "panda_mb": {
+            "host_port_list": ["${PANDA_ACTIVEMQ_LIST}"],
+            "use_ssl": false,
+            "cert_file": null,
+            "key_file": null,
+            "username": "panda",
+            "passcode": "${PANDA_ACTIVEMQ_PASSWD_panda}",
+            "verbose": true
         }
     },
     "queues": {
         "panda_jobstatus": {
             "server": "iDDS_mb",
             "destination": "/topic/panda_idds"
+        },
+        "panda_jedi": {
+            "server": "panda_mb",
+            "destination": "/topic/panda_jedi"
+        },
+        "panda_pilot": {
+            "server": "panda_mb",
+            "destination": "/topic/panda_pilot"
         }
     }
 }
