--- a/helm/idds/charts/postgres/templates/configmap.yaml
+++ b/helm/idds/charts/postgres/templates/configmap.yaml
@@ -11,5 +11,5 @@ data:
   POSTGRES_PASSWORD: {{ .Values.database.password }}
   POSTGRES_SCHEMA: {{ .Values.database.schema }}
   {{- if .Values.noRoot }}
-  PG_DATA: "/tmp/pg_volume/data"
+  PGDATA: "/tmp/pg_volume/data"
   {{- end }}
