--- a/helm/idds/charts/daemon/values.yaml
+++ b/helm/idds/charts/daemon/values.yaml
@@ -10,6 +10,9 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: "0.10.18"
 
+# run with non-root account
+noRoot: false
+
 # start the service when pod gets started
 autoStart: true
 
