--- a/helm/idds/charts/daemon/templates/deployment.yaml
+++ b/helm/idds/charts/daemon/templates/deployment.yaml
@@ -77,11 +77,10 @@ spec:
           args:
             - sleep 30;
               {{- if .Values.noRoot }}
-              grep -v user= /opt/idds/config_default/supervisord_idds.ini > /opt/idds/config_default/supervisord_idds.ini.tmp
-              mv /opt/idds/config_default/supervisord_idds.ini.tmp /opt/idds/config_default/supervisord_idds.ini
+              grep -v user= /opt/idds/config_default/supervisord_idds.ini > /opt/idds/config_default/supervisord_idds.ini.tmp;
+              mv /opt/idds/config_default/supervisord_idds.ini.tmp /opt/idds/config_default/supervisord_idds.ini;
               {{- end }}
               start-daemon.sh daemon
-              sleep infinity & wait
           {{ end -}}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
