--- a/helm/idds/charts/daemon/values.yaml
+++ b/helm/idds/charts/daemon/values.yaml
@@ -13,6 +13,9 @@ image:
 # start the service when pod gets started
 autoStart: true
 
+# run with non-root pid
+noRoot: false
+
 iddsServer: localhost
 
 persistentvolume:
