--- a/helm/idds/values.yaml
+++ b/helm/idds/values.yaml
@@ -12,7 +12,10 @@ database:
 daemon:
   enabled: true
   image:
-    tag: "0.11.2"
+    tag: "0.11.4"
+
+  # run with non-root pid
+  # noRoot: false
 
   database:
     name: *idds_db
@@ -20,10 +23,20 @@ daemon:
     password: *idds_password
     schema: *idds_schema
 
+  conductor:
+    brokers: activemq-dev
+    port: 61613
+    destination: /queue/iddspanda
+    username: FIXME_WRITER
+    password: FIXME_PASS
+
 rest:
   enabled: true
   image:
-    tag: "0.11.2"
+    tag: "0.11.4"
+
+  # run with non-root pid
+  # noRoot: false
 
   database:
     name: *idds_db
