--- a/helm/panda/charts/server/sandbox/panda_mbproxy_config.json
+++ b/helm/panda/charts/server/sandbox/panda_mbproxy_config.json
@@ -22,15 +22,19 @@
     "queues": {
         "panda_jobstatus": {
             "server": "iDDS_mb",
-            "destination": "/topic/panda_idds"
+            "destination": "/topic/pandaidds"
         },
         "panda_jedi": {
             "server": "panda_mb",
             "destination": "/queue/panda_jedi"
         },
-        "panda_pilot": {
-            "server": "panda_mb",
+        "panda_pilot_queue": {
+            "server": "pilot_mb",
             "destination": "/queue/panda_pilot"
+        },
+        "panda_pilot_topic": {
+            "server": "pilot_mb",
+            "destination": "/topic/panda_pilot"
         }
     }
 }
