--- a/helm/panda/charts/server/sandbox/panda_mbproxy_config.json
+++ b/helm/panda/charts/server/sandbox/panda_mbproxy_config.json
@@ -29,11 +29,11 @@
             "destination": "/queue/panda_jedi"
         },
         "panda_pilot_queue": {
-            "server": "pilot_mb",
+            "server": "panda_mb",
             "destination": "/queue/panda_pilot"
         },
         "panda_pilot_topic": {
-            "server": "pilot_mb",
+            "server": "panda_mb",
             "destination": "/topic/panda_pilot"
         }
     }
