--- a/helm/harvester/charts/harvester/values.yaml
+++ b/helm/harvester/charts/harvester/values.yaml
@@ -28,6 +28,9 @@ harvesterID: "my-harvester"
 # run with non-root pid
 noRoot: false
 
+# use stable condor instead of latest
+useStableCondor: false
+
 persistentvolume:
   create: false
   class: nas
