following changes with expand_values in panda-common

--- a/helm/panda/charts/jedi/panda_jedi_config.json
+++ b/helm/panda/charts/jedi/panda_jedi_config.json
@@ -1,6 +1,8 @@
 {
     "db": {
-        "backend": "postgres"
+        "backend": "postgres",
+        "dbhost": "$PANDA_DB_HOST",
+        "dbpasswd": "$PANDA_DB_PASSWORD"
     },
     "ddm": {
         "modConfig": "wlcg:4:pandajedi.jediddm.GenDDMClient:GenDDMClient::off,wlcg:2:pandajedi.jediddm.AtlasDDMClient:AtlasDDMClient:sphenix",
