--- a/helm/panda/charts/server/templates/deployment.yaml
+++ b/helm/panda/charts/server/templates/deployment.yaml
@@ -116,6 +116,8 @@ spec:
                  name: {{ .Release.Name }}-postgres-configmap
                  {{- end }}
              - configMapRef:
+                 name: {{ .Release.Name }}-external-env
+             - configMapRef:
                  name: {{ include "server.fullname" . }}-env
           env:
             - name: PANDA_SERVER_CONF_SERVERNAME
