--- a/helm/panda/charts/jedi/templates/deployment.yaml
+++ b/helm/panda/charts/jedi/templates/deployment.yaml
@@ -106,6 +106,10 @@ spec:
                 name: {{ .Release.Name }}-postgres-configmap
                 {{- end }}
             {{- end }}
+          env:
+            # set no_proxy since $() is resolved not in envFrom section
+            - name: no_proxy
+              value: $(no_proxy),$(PANDA_IDDS_HOST)
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
