--- a/helm/panda/charts/server/templates/deployment.yaml
+++ b/helm/panda/charts/server/templates/deployment.yaml
@@ -83,6 +83,7 @@ spec:
               cp /opt/panda/sandbox/run-panda-crons /data/panda/;
               chmod +x /data/panda/run-panda-crons;
               cp /opt/panda/sandbox/* /data/panda/;
+              python /data/panda/process_template.py;
               /etc/rc.d/init.d/run-panda-services;
               sleep infinity & wait
           {{- end }}
