--- a/helm/bigmon/values.yaml
+++ b/helm/bigmon/values.yaml
@@ -20,10 +20,10 @@ main:
 
   autoStart: true
 
-  persistentvolume:
-    create: false         
-    path: "/mnt/panda-bigmon-logs"
-    size: 5Gi
+  #persistentvolume:
+  #  create: false         
+  #  path: "/mnt/panda-bigmon-logs"
+  #  size: 5Gi
   hostcerts:
     enabled: false
   database:
