--- a/helm/bigmon/values-lsst.yaml
+++ b/helm/bigmon/values-lsst.yaml
@@ -3,7 +3,7 @@
 # # Declare variables to be passed into your templates.
 #
 
-daemon:
+main:
   persistentvolume:
     class: wekafs--sdf-k8s01
     create: false
