panda/idds integration

--- a/helm/panda/templates/configmap.yaml
+++ b/helm/panda/templates/configmap.yaml
@@ -24,3 +24,11 @@ data:
   # iDDS
   PANDA_IDDS_HOST: "{{ .Values.idds.restHost }}"
   PANDA_IDDS_PORT: "{{ .Values.idds.restPort }}"
+  PANDA_IDDS_AUTH_ID_TOKEN: "{{ .Values.idds.authIdToken }}"
+  PANDA_IDDS_AUTH_VO: "{{ .Values.idds.vo }}"
+  # Rucio
+  PANDA_RUCIO_HOST: "{{ .Values.idds.rucioHost }}"
+  PANDA_RUCIO_AUTH_HOST: "{{ .Values.rucio.authHost }}"
+  PANDA_RUCIO_USERNAME: "{{ .Values.rucio.username }}"
+  PANDA_RUCIO_PASSWORD: "{{ .Values.rucio.password }}"
+  PANDA_RUCIO_ACCOUNT: "{{ .Values.rucio.account }}"
