--- a/helm/panda/templates/configmap.yaml
+++ b/helm/panda/templates/configmap.yaml
@@ -25,7 +25,7 @@ data:
   PANDA_IDDS_HOST: "{{ .Values.idds.restHost }}"
   PANDA_IDDS_PORT: "{{ .Values.idds.restPort }}"
   PANDA_IDDS_AUTH_ID_TOKEN: "{{ .Values.idds.authIdToken }}"
-  PANDA_IDDS_AUTH_VO: "{{ .Values.idds.vo }}"
+  PANDA_IDDS_AUTH_VO: "{{ .Values.idds.authVO }}"
   # Rucio
   PANDA_RUCIO_HOST: "{{ .Values.idds.rucioHost }}"
   PANDA_RUCIO_AUTH_HOST: "{{ .Values.rucio.authHost }}"
