--- a/helm/panda/charts/server/panda_server_config.json
+++ b/helm/panda/charts/server/panda_server_config.json
@@ -18,6 +18,7 @@
         "setupper_plugins": "wlcg:dataservice.SetupperDummyPlugin:SetupperDummyPlugin", 
         "token_authType": "oidc",
         "cache_dir": "/var/cache/pandaserver",
+        "sandboxHostname": "$PANDA_SANDBOX_HOST",
         "mbproxy_configFile": "/opt/panda/etc/panda/panda_mbproxy_config.json"
     },
     "daemon": {
