panda/idds integration

--- a/helm/panda/charts/server/templates/configmap.yaml
+++ b/helm/panda/charts/server/templates/configmap.yaml
@@ -28,9 +28,9 @@ kind: ConfigMap
 metadata:
   name: {{ include "server.fullname" . }}-env
 data:
-  PANDA_URL: "https://{{ include "server.fullname" .}}:{{ .Values.service.httpsPort }}/server/panda"
-  PANDA_URL_SSL: "https://{{ include "server.fullname" .}}:{{ .Values.service.httpsPort }}/server/panda"
-  PANDA_SANDBOX_HOST: "{{ include "server.fullname" .}}"
+  PANDA_URL: "https://{{ include "server.fullname" . }}:{{ .Values.service.httpsPort }}/server/panda"
+  PANDA_URL_SSL: "https://{{ include "server.fullname" . }}:{{ .Values.service.httpsPort }}/server/panda"
+  PANDA_SANDBOX_HOST: "{{ .Values.hostName }}"
   {{- if .Values.authIdToken }}
   PANDA_VERIFY_HOST: "off"
   PANDA_AUTH: "oidc"
