--- a/helm/panda/templates/configmap.yaml
+++ b/helm/panda/templates/configmap.yaml
@@ -27,7 +27,7 @@ data:
   PANDA_IDDS_AUTH_ID_TOKEN: "{{ .Values.idds.authIdToken }}"
   PANDA_IDDS_AUTH_VO: "{{ .Values.idds.authVO }}"
   # Rucio
-  PANDA_RUCIO_HOST: "{{ .Values.idds.rucioHost }}"
+  PANDA_RUCIO_HOST: "{{ .Values.rucio.rucioHost }}"
   PANDA_RUCIO_AUTH_HOST: "{{ .Values.rucio.authHost }}"
   PANDA_RUCIO_USERNAME: "{{ .Values.rucio.username }}"
   PANDA_RUCIO_PASSWORD: "{{ .Values.rucio.password }}"
