--- a/helm/bigmon/charts/main/templates/deployment.yaml
+++ b/helm/bigmon/charts/main/templates/deployment.yaml
@@ -87,10 +87,10 @@ spec:
               # - name: {{ include "main.fullname" . }}-logs
               #  mountPath: /var/log/main/
               - name: {{ include "main.fullname" . }}-configmap
-                mountPath: /data/idds/configmap
+                mountPath: /data/bigmon/configmap
               {{- if .Values.hostcerts.enabled -}}
               - name: {{ include "main.fullname" . }}-certs
-                mountPath: /opt/panda/etc/cert
+                mountPath: /opt/bigmon/etc/cert
               {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
