--- a/helm/bigmon/values.yaml
+++ b/helm/bigmon/values.yaml
@@ -2,21 +2,14 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-# panda_db, panda_user and panda_schema should not be changed currently
-database:
-  panda_db: &panda_db "FIXME"
-  panda_user: &panda_user "FIXME"
-  panda_password: &panda_password "FIXME"
-  panda_schema: &panda_schema "FIXME"
-
 main:
   enabled: true
   replicaCount: 1
   image:
-    repository: ekaravak/bigmon
+    repository: ghcr.io/pandawms/panda-bigmon-core
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
-    tag: "0.0.2"
+    tag: "latest"
 
   autoStart: true
 
@@ -26,14 +19,25 @@ main:
   #  size: 5Gi
   hostcerts:
     enabled: false
+
+  # hostname for external access
+  hostName: "FIXME"
+
+  # secret key for configuration
+  secretKey: "FIXME"
+
   database:
-    panda_db: *panda_db
-    panda_user: *panda_user
-    panda_password: *panda_password
-    panda_schema: *panda_schema
+    hostName: "panda-server"
+    password: "FIXME"
+
+  rucio:
+    rucioHost: "https://rucio-lb-prod.cern.ch"
+    authHost: "https://rucio-auth-prod.cern.ch"
+
   service:
     type: ClusterIP
     httpsPort: 443
+
   ingress:
     enabled: true
     hosts:
